<resources>
    <string name="app_name">GitHubUsers</string>
    <string name="refresh">refresh</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_users">default users</string>
    <string name="github_image">github image</string>
    <string name="save_to_png">save to png</string>
    <string name="repositories">repositories</string>
    <string name="name">name</string>
    <string name="language">language</string>
    <string name="stargazers_count">stargazers count</string>
    <string name="watchers_count">watchers count</string>
    <string name="forks_count">forks count</string>
</resources>